String processing performance improvements Added better database error handling Updated version information Updated updatefile.txt

--- a/translations/wml.phrases.txt
+++ b/translations/wml.phrases.txt
@@ -63,4 +63,9 @@
 	{
 		"en"			"The map menu could not be generated!"
 	}
+	
+	"Database Connection Error"
+	{
+		"en"			"No database connection!"
+	}
 }
