--- a/translations/de/wml.phrases.txt
+++ b/translations/de/wml.phrases.txt
@@ -63,4 +63,9 @@
 	{
 		"de"			"Das Kartenmenü konnte nicht erzeugt werden!"
 	}
+	
+	"Database Connection Error"
+	{
+		"en"			"Keine Verbindung zur Datenbank!"
+	}
 }
