Added missing russian translation

--- a/translations/ru/wml.phrases.txt
+++ b/translations/ru/wml.phrases.txt
@@ -63,4 +63,9 @@
 	{
 		"ru"			"Не удалось сгенерировать меню карты!"
 	}
+	
+	"Database Connection Error"
+	{
+		"ru"			"Не удается подключиться к базе данных!"
+	}
 }
